feat: support unique visits
